# surv-ai-lance

./: README.md
ai-model/: ViolenceDetection.ipynb
blockchain/: Cargo.toml  Rocket.toml
blockchain/src/: main.rs
blockchain/src/handlers/: blockchain_handler.rs  mod.rs
blockchain/src/models/: blockchain.rs
blockchain/src/utils/: hash.rs
cdn/: .env  .gitignore  Cargo.toml  Rocket.toml
cdn/nginx/: default.conf
cdn/src/: main.rs
cdn/src/handlers/: mod.rs  serve_handler.rs  upload_handler.rs
cdn/src/models/: upload.rs
cdn/src/responses/: mod.rs  upload_res.rs
cdn/src/utils/: keygen.rs
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
server/src/handlers/: case_handler.rs  mod.rs  ws_handler.rs
server/src/models/: case.rs  mod.rs  request.rs
server/src/websockets/: guard.rs  handler.rs  manager.rs  mod.rs
website/: package-lock.json  package.json
website/public/: earth.glb  model.glb  scene.glb
website/src/: App.js
website/src/components/: Banner.js  Canvas.js  GradientLine.js  InfoSec.js  Login.js  Navbar.js  ThreeModel.js  ThreeSection.js
website/src/routes/: Actions.js  Homepage.js  Homepags.js
website/src/stylesheets/: Actions.css  Banner.css  GradientLine.css  InfoSec.css  Login.css  Navbar.css  ThreeModel.css  ThreeSection.css  prep.css
websockets/: main.py
