[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.197"
sha2 = "0.10.8"
tracing-subscriber = "0.3.18"
