[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.197"
tracing-subscriber = "0.3.18"
